<resources>
    <string name="app_name">New Tiktok</string>
    <string name="internet_notconnected">Please check your internet connection</string>
    <string name="internet_not_connected_title">Network not available</string>
    <string name="signin_message">Please Sign In!</string>
    <string name="jwt_expired">jwt expired</string>
    <string name="error_while_posting_comment">Error occur, Please try again!</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="notificationText">Notification Arrived...</string>
    <string name="zoom_in_or_zoom_out_your_picture_for_fine_croping">Zoom in or Zoom out your picture for fine croping</string>
    <string name="crop">Crop</string>
    <string name="profile_photo">Profile Photo</string>

    <string name="small_text">
    "Material is the metaphor.\n\n"

    "A material metaphor is the unifying theory of a rationalized space and a system of motion."
    "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
    "technologically advanced and open to imagination and magic.\n"
    "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
    "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
    "flexibility of the material creates new affordances that supercede those in the physical "
    "world, without breaking the rules of physics.\n\n"

    "Bold, graphic, intentional.\n\n"

    "The foundational elements of print based design typography, grids, space, scale, color, "
    "and use of imagery guide visual treatments. These elements do far more than please the "
    "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
    "imagery, large scale typography, and intentional white space create a bold and graphic "
    "interface that immerse the user in the experience.\n"
    "An emphasis on user actions makes core functionality immediately apparent and provides "
    "waypoints for the user."
  </string>
    <string name="reply">Reply</string>
    <string name="_0_comment">0 comment</string>
    <string name="_0_following">0 Following</string>
    <string name="_0_fans">0 Fans</string>
    <string name="delete_comment">Delete Comment</string>
    <string name="are_you_want_to_delete">Are you sure you want to delete this Comment?</string>
    <string name="can_delete_own_comment">You can only delete your own Comment!</string>
    <string name="profile_image">Profile Image</string>
    <string name="uploading_profile_image">Uploading Profile Image</string>
    <string name="cancel">Cancel</string>
    <string name="upload_failed_pleaes_retry">upload Failed Please Retry</string>
    <string name="please_check_your_internet_connection">Please check your internet connection</string>
    <string name="upload_failed_please_retry">upload Failed Please Retry</string>
    <string name="changed_successfully">changed successfully</string>
    <string name="open_camera">Take from Camera</string>
    <string name="open_gallery">Select from Gallery</string>
    <string name="pic_sound">Pic Sound</string>
    <string name="my_sound">My Sound</string>

    <!-- For SingleAudioInfo Trimmer -->
    <string name="start_marker">Start marker</string>
    <string name="end_marker">End marker</string>
    <string name="rewind">Rewind</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="ffwd">Fast forward</string>
    <string name="start_label">Start:</string>
    <string name="end_label">End:</string>

    <string name="progress_dialog_loading">Loading…</string>
    <string name="progress_dialog_saving">Trimming audio…</string>
    <string name="alert_title_failure">Error</string>
    <string name="alert_ok_button">OK</string>
    <string name="alert_title_success">Success</string>


    <string name="no_space_error">Your SD card is full, there is not enough space to save this file.</string>
    <string name="no_unique_filename">Unable to find unique filename</string>

    <string name="write_error">Error writing file</string>
    <string name="read_error">Error reading file</string>
    <string name="bad_extension_error">Sorry, not yet able to edit files of type</string>
    <string name="no_extension_error">Sorry, can\'t edit a file if it doesn\'t have an extension like .mp3 or .wav</string>
    <string name="play_error">Unable to play this media file</string>

    <string name="save">Trim \\ Cut</string>
    <string name="short_seconds">sec</string>
    <string name="megabyte">MB</string>
    <string name="kilobyte">KB</string>
    <string name="time_seconds">seconds</string>
    <string name="label_pick_a_sound">Pick a Sound</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="label_videos">Videos</string>
    <string name="no_video_found">No video found</string>
    <string name="msg_permission_please_give_us_storage_permission">Please give us storage permission</string>
    <string name="msg_permission_camera_permission">Please give us Camera permission</string>
    <string name="msg_permission_please_give_us_storage_audio_camera_permission">Please give us storage permissions for Camera ,Storage and Record Audio permission</string>
    <string name="post">Post</string>
    <string name="lable_describe_your_video">Describe your video</string>
    <string name="video_processing">Video Processing</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="delete_video_segment">Delete Video Segment</string>
    <string name="are_you_sure_want_to_delete_last_segment">Are you sure you want to delete last segment?</string>
    <string name="msg_unable_to_extract_video">Unable to Extract video</string>
    <string name="trimming_video_please_wait">Trimming Video Please wait</string>
    <string name="msg_uploading_complete">Uploading Complete</string>

</resources>