<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/bkgnd"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="centerCrop"
            android:src="@color/background_color" />

        <com.photex.tiktok.customViews.WaveformView
            android:id="@+id/waveform"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.photex.tiktok.customViews.MarkerView
            android:id="@+id/startmarker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/start_marker"
            android:nextFocusDown="@+id/endmarker"
            android:src="@drawable/marker_left" />

        <com.photex.tiktok.customViews.MarkerView
            android:id="@+id/endmarker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/end_marker"
            android:nextFocusDown="@+id/info"
            android:nextFocusUp="@+id/startmarker"
            android:src="@drawable/marker_right" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="62dip"
        android:background="@color/background_color"
        android:gravity="center">

        <ImageButton
            android:id="@+id/rew"
            style="@android:style/MediaButton"
            android:layout_width="64dip"
            android:layout_height="52dip"
            android:layout_marginBottom="6dip"
            android:layout_marginTop="6dip"
            android:contentDescription="@string/rewind"
            android:src="@android:drawable/ic_media_previous" />

        <ImageButton
            android:id="@+id/play"
            style="@android:style/MediaButton"
            android:layout_width="71dip"
            android:layout_height="52dip"
            android:layout_marginBottom="6dip"
            android:layout_marginTop="6dip"
            android:contentDescription="@string/play"
            android:src="@android:drawable/ic_media_play" />

        <ImageButton
            android:id="@+id/ffwd"
            style="@android:style/MediaButton"
            android:layout_width="64dip"
            android:layout_height="52dip"
            android:layout_marginBottom="6dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="6dip"
            android:contentDescription="@string/ffwd"
            android:src="@android:drawable/ic_media_next" />

    </LinearLayout>

    <TextView
        android:id="@+id/info"
        style="@style/AudioFileInfoOverlayText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        android:gravity="center"
        android:nextFocusDown="@+id/play"
        android:nextFocusUp="@+id/endmarker" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/lineTop"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_selector"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left|center"
                android:layout_toLeftOf="@+id/middle_view"
                android:clickable="false"
                android:padding="10dp"
                android:src="@drawable/ic_close" />

            <View
                android:id="@+id/middle_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/middle_view"
                android:clickable="false"
                android:gravity="left|center"
                android:text="Cancel"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/white" />

        <RelativeLayout
            android:id="@+id/btn_trim"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_selector"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/middle_view_second"
                android:clickable="false"
                android:gravity="right|center"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <View
                android:id="@+id/middle_view_second"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_margin="5dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left|center"
                android:layout_toRightOf="@+id/middle_view_second"
                android:clickable="false"
                android:padding="10dp"
                android:src="@drawable/trim_icon" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        style="@style/ToolbarBackground"
        android:layout_width="fill_parent"
        android:layout_height="62dip"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/mark_start"
            android:layout_width="wrap_content"
            android:layout_height="31dip"
            android:clickable="true"
            android:gravity="center"
            android:labelFor="@+id/starttext"
            android:text="@string/start_label"
            android:textColor="#ffffffff"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/starttext"
            android:layout_width="70dip"
            android:layout_height="31dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="30dip"
            android:gravity="center"
            android:inputType="number|numberDecimal"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/mark_end"
            android:layout_width="wrap_content"
            android:layout_height="31dip"
            android:clickable="true"
            android:gravity="center"
            android:labelFor="@+id/endtext"
            android:text="@string/end_label"
            android:textColor="#ffffffff"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/endtext"
            android:layout_width="70dip"
            android:layout_height="31dip"
            android:layout_marginLeft="10dip"
            android:gravity="center"
            android:inputType="number|numberDecimal"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>
